--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -156,6 +156,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="..\SLikeNet\DependentExtensions\Lobby2\Rooms\RoomsPlugin.cpp" />
     <ClCompile Include="..\SLikeNet\DependentExtensions\Lobby2\Rooms\RoomTypes.cpp" />
     <ClCompile Include="src\aigiveitemsaction.cpp" />
+    <ClCompile Include="src\aimovestackaction.cpp" />
     <ClCompile Include="src\attack.cpp" />
     <ClCompile Include="src\attackclasscat.cpp" />
     <ClCompile Include="src\attackdescriptor.cpp" />
