--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1175,6 +1175,9 @@
     <ClCompile Include="src\aimovestackaction.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\aigiveitemsactionhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3063,6 +3066,9 @@
     </ClInclude>
     <ClInclude Include="include\aiattitudes.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\aigiveitemsactionhooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
