Support generator menu for multiplayer skirmish

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -270,6 +270,8 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\menunewskirmishhotseathooks.cpp" />
     <ClCompile Include="src\menunewskirmishmultihooks.cpp" />
     <ClCompile Include="src\menunewskirmishsinglehooks.cpp" />
+    <ClCompile Include="src\menurandomscenario.cpp" />
+    <ClCompile Include="src\menurandomscenariomulti.cpp" />
     <ClCompile Include="src\menurandomscenariosingle.cpp" />
     <ClCompile Include="src\midgardscenariomap.cpp" />
     <ClCompile Include="src\midserverlogichooks.cpp" />
@@ -666,6 +668,8 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\menunewskirmishhotseathooks.h" />
     <ClInclude Include="include\menunewskirmishmultihooks.h" />
     <ClInclude Include="include\menunewskirmishsinglehooks.h" />
+    <ClInclude Include="include\menurandomscenario.h" />
+    <ClInclude Include="include\menurandomscenariomulti.h" />
     <ClInclude Include="include\menurandomscenariosingle.h" />
     <ClInclude Include="include\midanim2.h" />
     <ClInclude Include="include\midanim2base.h" />
