--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1136,6 +1136,12 @@
     <ClCompile Include="src\menunewskirmishmultihooks.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="src\menurandomscenariomulti.cpp">
+      <Filter>features\random scenario generator</Filter>
+    </ClCompile>
+    <ClCompile Include="src\menurandomscenario.cpp">
+      <Filter>features\random scenario generator</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2934,6 +2940,12 @@
     </ClInclude>
     <ClInclude Include="include\menunewskirmishmultihooks.h">
       <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\menurandomscenariomulti.h">
+      <Filter>features\random scenario generator</Filter>
+    </ClInclude>
+    <ClInclude Include="include\menurandomscenario.h">
+      <Filter>features\random scenario generator</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
