--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3175,6 +3175,9 @@
     <ClInclude Include="include\quickstring.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\wavstore.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\soundsystemsample.h">
       <Filter>game</Filter>
     </ClInclude>
