Add CSoundSystemStream structure

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3181,6 +3181,9 @@
     <ClInclude Include="include\soundsystemsample.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\soundsystemstream.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
