--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -1072,6 +1072,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\raceset.h" />
     <ClInclude Include="include\soundsystemsample.h" />
     <ClInclude Include="include\soundsystemstream.h" />
+    <ClInclude Include="include\streamholder.h" />
     <ClInclude Include="include\wavstore.h" />
     <ClInclude Include="include\spellcat.h" />
     <ClInclude Include="include\spinbuttoninterf.h" />
