--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -1070,6 +1070,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\movepathhooks.h" />
     <ClInclude Include="include\pointset.h" />
     <ClInclude Include="include\raceset.h" />
+    <ClInclude Include="include\sounds.h" />
     <ClInclude Include="include\soundsystemsample.h" />
     <ClInclude Include="include\soundsystemstream.h" />
     <ClInclude Include="include\streamholder.h" />
