Implement custom image class CImage2Memory

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -235,6 +235,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\encyclopediapopup.cpp" />
     <ClCompile Include="src\exchangeinterfhooks.cpp" />
     <ClCompile Include="src\groupupgradehooks.cpp" />
+    <ClCompile Include="src\image2memory.cpp" />
     <ClCompile Include="src\intintmap.cpp" />
     <ClCompile Include="src\intvector.cpp" />
     <ClCompile Include="src\button.cpp" />
@@ -294,6 +295,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midgardscenariomap.cpp" />
     <ClCompile Include="src\midserver.cpp" />
     <ClCompile Include="src\midserverlogichooks.cpp" />
+    <ClCompile Include="src\mqimage2surface16.cpp" />
     <ClCompile Include="src\netsingleplayer.cpp" />
     <ClCompile Include="src\netsingleplayerhooks.cpp" />
     <ClCompile Include="src\nativegameinfo.cpp" />
@@ -671,6 +673,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\gameimagedata.h" />
     <ClInclude Include="include\groupareamanagement.h" />
     <ClInclude Include="include\groupupgradehooks.h" />
+    <ClInclude Include="include\image2memory.h" />
     <ClInclude Include="include\imagedatadescriptor.h" />
     <ClInclude Include="include\imgpacker.h" />
     <ClInclude Include="include\imgpackerloader.h" />
