--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1229,6 +1229,9 @@
     <ClCompile Include="src\generationresultinterf.cpp">
       <Filter>features\random scenario generator</Filter>
     </ClCompile>
+    <ClCompile Include="src\chatinterf.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3204,6 +3207,24 @@
     </ClInclude>
     <ClInclude Include="include\generationresultinterf.h">
       <Filter>features\random scenario generator</Filter>
+    </ClInclude>
+    <ClInclude Include="include\chatinterf.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\lovechat.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\notifyplayerlist.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\midpopupinterf.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\textmessage.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\playerlistentry.h">
+      <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
