--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1253,6 +1253,12 @@
     <ClCompile Include="src\bindings\diplomacyview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\fonts.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
+    <ClCompile Include="src\fontshooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3264,6 +3270,12 @@
     </ClInclude>
     <ClInclude Include="include\bindings\diplomacyview.h">
       <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\fonts.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\fontshooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
