--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1265,6 +1265,12 @@
     <ClCompile Include="src\bindings\fogview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\customunitencyclopedia.cpp">
+      <Filter>features</Filter>
+    </ClCompile>
+    <ClCompile Include="src\customunitencyclopediafunctions.cpp">
+      <Filter>features</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3288,6 +3294,12 @@
     </ClInclude>
     <ClInclude Include="include\bindings\fogview.h">
       <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\customunitencyclopedia.h">
+      <Filter>features</Filter>
+    </ClInclude>
+    <ClInclude Include="include\customunitencyclopediafunctions.h">
+      <Filter>features</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
