--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -312,6 +312,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\netsingleplayer.cpp" />
     <ClCompile Include="src\netsingleplayerhooks.cpp" />
     <ClCompile Include="src\nativegameinfo.cpp" />
+    <ClCompile Include="src\scenarioobjectstreams.cpp" />
     <ClCompile Include="src\scenariotemplates.cpp" />
     <ClCompile Include="src\refreshinfo.cpp" />
     <ClCompile Include="src\scenedit.cpp" />
@@ -792,6 +793,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\nativeraceinfo.h" />
     <ClInclude Include="include\nativespellinfo.h" />
     <ClInclude Include="include\nativeunitinfo.h" />
+    <ClInclude Include="include\scenarioobjectstreams.h" />
     <ClInclude Include="include\scenariotemplates.h" />
     <ClInclude Include="include\scenedit.h" />
     <ClInclude Include="include\isoborder.h" />
@@ -1107,6 +1109,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\soundsystemsample.h" />
     <ClInclude Include="include\soundsystemstream.h" />
     <ClInclude Include="include\streamholder.h" />
+    <ClInclude Include="include\streamregister.h" />
     <ClInclude Include="include\textmessage.h" />
     <ClInclude Include="include\wavstore.h" />
     <ClInclude Include="include\spellcat.h" />
