--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1268,6 +1268,9 @@
     <ClCompile Include="src\sitecategories.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\scenarioobjectstreams.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -3291,6 +3294,12 @@
     </ClInclude>
     <ClInclude Include="include\bindings\fogview.h">
       <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\scenarioobjectstreams.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\streamregister.h">
+      <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
