--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -3301,6 +3301,9 @@
     <ClInclude Include="include\streamregister.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\objectinterf.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
