Add lua bindings for GVars.dbf

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1265,6 +1265,9 @@
     <ClCompile Include="src\bindings\fogview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\globalvariablesview.cpp">
+      <Filter>bindings</Filter>
+    </ClCompile>
     <ClCompile Include="src\sitecategories.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -3293,6 +3296,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\bindings\fogview.h">
+      <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\globalvariablesview.h">
       <Filter>bindings</Filter>
     </ClInclude>
     <ClInclude Include="include\scenarioobjectstreams.h">
