--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -787,6 +787,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midpopupinterf.h" />
     <ClInclude Include="include\midrod.h" />
     <ClInclude Include="include\midserverlogichooks.h" />
+    <ClInclude Include="include\midsitemerchant.h" />
     <ClInclude Include="include\midunitext.h" />
     <ClInclude Include="include\midunitgroupadapter.h" />
     <ClInclude Include="include\mqdb.h" />
